Implements ptBR locale

--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -40,7 +40,7 @@
   "cases": {
     "title": "Featured case",
     "services": "Services",
-    "access": "Access published",
+    "access": "View",
     "beer-awards-platform": {
       "name": "Beer Awards Platform",
       "services": [
