Fix pt-BR dictionary

--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -34,7 +34,7 @@
     },
     "social-media": {
       "title": "Social media",
-      "body": "Gerenciamos e criamos a voz da sua marca nas redes sociais para manter a conscistência de conteúdo."
+      "body": "Gerenciamos e criamos a voz da sua marca nas redes sociais para manter a consistência de conteúdo."
     }
   },
   "cases": {
