Fix mobile responsive to small device

--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -25,7 +25,7 @@
       "body": "Antes mesmo de qualquer desenvolvimento, nos preocupamos em entender e definir seu produto ou serviço através de pesquisas de mercado e estratégias de marketing."
     },
     "development": {
-      "title": "Desenvolvimento",
+      "title": "Programação",
       "body": "Desenvolvemos soluções sob-medida para você, desde o site institucional até o sistema completo que sua empresa precisa."
     },
     "branding": {
